apps/my-app/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: my-app
  labels:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: gitops-test
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: docker.io/phpmyadmin/phpmyadmin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 250m
