apps/my-app/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: my-app
  labels:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: gitops-test
spec:
  selector:
    app.kubernetes.io/name: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
